fix responsive issue on mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  min-width: 837px;
+  min-width: 350px;
 }
 
 @layer utilities {
